src/objects/EJF_Opp_Split_Snapshot__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forecasted_Split_Bookings_editable__c</fullName>
        <label>Forecasted Split Bookings (editable)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <label>Opportunity Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <label>Opportunity Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Split_Anchor_Realization_EJF__c</fullName>
        <label>Split Anchor Realization (EJF)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Split_Percentage__c</fullName>
        <label>Split Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Split_Risk_Projection_50_EFJ__c</fullName>
        <label>Split Risk Projection &gt;50% (EFJ)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Split_Risk_Projection_75_EFJ__c</fullName>
        <label>Split Risk Projection &gt;75% (EFJ)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Split_Risk_Projection_90_EFJ__c</fullName>
        <label>Split Risk Projection &gt;90% (EFJ)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Split_Run_Rate_EJF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Split Run Rate (EJF)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Split_User_Team_Static_Group_Buckets__c</fullName>
        <label>Split User Team Static (Group Buckets)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Split_User_Team_Static__c</fullName>
        <label>Split User Team (Static)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Split_User__c</fullName>
        <label>Split User</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Team__c</fullName>
        <label>User Team</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>EJF Opp Split Snapshot</label>
    <nameField>
        <label>EJF Opp Split Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EJF Opp Split Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>